--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -1185,12 +1185,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>attribute</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>categorical</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>interval</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>mixed</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>numeric</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ordinal</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          type  attribute\n",
+       "0  categorical         21\n",
+       "1     interval          1\n",
+       "2        mixed          7\n",
+       "3      numeric          7\n",
+       "4      ordinal         49"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# How many features are there of each data type?\n",
-    "\n"
+    "featTypeCount = feat_info.groupby(['type'], as_index=False)[['attribute']].count()\n",
+    "featTypeCount\n"
    ]
   },
   {
@@ -1207,13 +1277,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- binary categoricals ---\n",
+      "               index  nUnique\n",
+      "1          ANREDE_KZ        2\n",
+      "3           VERS_TYP        2\n",
+      "7   GREEN_AVANTGARDE        2\n",
+      "12           SOHO_KZ        2\n",
+      "16       OST_WEST_KZ        2\n",
+      "--- multi categoricals ---\n",
+      "               index  nUnique\n",
+      "0     LP_STATUS_GROB        5\n",
+      "2        SHOPPER_TYP        4\n",
+      "4    GFK_URLAUBERTYP       12\n",
+      "5      CJT_GESAMTTYP        6\n",
+      "6     CAMEO_DEU_2015       44\n",
+      "8           ZABEOTYP        6\n",
+      "9   NATIONALITAET_KZ        3\n",
+      "10   CAMEO_DEUG_2015        9\n",
+      "11         FINANZTYP        6\n",
+      "13   LP_FAMILIE_FEIN       11\n",
+      "14   LP_FAMILIE_GROB        5\n",
+      "15    LP_STATUS_FEIN       10\n",
+      "17       GEBAEUDETYP        7\n"
+     ]
+    }
+   ],
    "source": [
     "# Assess categorical variables: which are binary, which are multi-level, and\n",
     "# which one needs to be re-encoded?\n",
-    "\n"
+    "feat_DF = feat_info[['attribute', 'type']]\n",
+    "feat_DF = feat_DF.loc[feat_DF['type']=='categorical']\n",
+    "catAttList = feat_DF['attribute'].values\n",
+    "\n",
+    "attList = list(set(azidasCleaned.columns.values).intersection(catAttList))\n",
+    "azidasCleanedCat = azidasCleaned[attList]\n",
+    "\n",
+    "uniqueValueDF = azidasCleanedCat.nunique().to_frame().reset_index(level=0, inplace=False)\n",
+    "uniqueValueDF.columns = ['index', 'nUnique']\n",
+    "\n",
+    "#Binary categoricals\n",
+    "binDF = uniqueValueDF.loc[uniqueValueDF['nUnique']<=2]\n",
+    "\n",
+    "#Multi-level categoricals\n",
+    "mulDF = uniqueValueDF.loc[uniqueValueDF['nUnique']>2]\n",
+    "\n",
+    "print('--- binary categoricals ---')\n",
+    "print(binDF)\n",
+    "print('--- multi categoricals ---')\n",
+    "print(mulDF)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['LP_STATUS_GROB',\n",
+       " 'SHOPPER_TYP',\n",
+       " 'GFK_URLAUBERTYP',\n",
+       " 'CJT_GESAMTTYP',\n",
+       " 'ZABEOTYP',\n",
+       " 'NATIONALITAET_KZ',\n",
+       " 'CAMEO_DEUG_2015',\n",
+       " 'FINANZTYP',\n",
+       " 'LP_FAMILIE_GROB',\n",
+       " 'GEBAEUDETYP',\n",
+       " 'OST_WEST_KZ']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hotEncodeColumns = mulDF['index'].values.tolist()\n",
+    "hotEncodeColumns.append('OST_WEST_KZ')\n",
+    "dropColumns = ['LP_FAMILIE_FEIN', 'LP_STATUS_FEIN', 'CAMEO_DEU_2015']\n",
+    "hotEncodeColumns = [x for x in hotEncodeColumns if x not in dropColumns]\n",
+    "azidasCleaned = azidasCleaned.drop(dropColumns, axis=1)\n",
+    "\n",
+    "hotEncodeColumns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(780153, 76)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "azidasCleaned.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ostWestDict = {'W': 0, 'O': 1}\n",
+    "azidasCleaned['OST_WEST_KZ'].replace(ostWestDict, inplace=True)\n",
+    "azidasCleaned['OST_WEST_KZ'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "azidasCleaned_ohe = azidasCleaned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "azidasCleaned_ohe = azidasCleaned_ohe[hotEncodeColumns]\n",
+    "azidasCleaned_ohe = azidasCleaned_ohe.applymap(str)\n",
+    "azidasCleaned_ohe = pd.get_dummies(azidasCleaned_ohe)\n",
+    "azidasCleaned_ohe = azidasCleaned_ohe.apply(pd.to_numeric, errors='coerce')"
    ]
   },
   {
